changes made from theia lab environment

--- a/Intro - Cloud Development with HTML,CSS,Javascript/form_validation.html
+++ b/Intro - Cloud Development with HTML,CSS,Javascript/form_validation.html
@@ -22,6 +22,7 @@
     <title>Contact Details</title>
     </head>
     <body>
+        <h2>Welcome Guest</h2>
         <h2>Enter your contact Details:</h2> <br>
         <form id="form1" onsubmit="return checkdata()">
             <label for="name">Name :</label>
